# whtop

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE-MIT  Makefile.toml  README.md  docker-compose.yaml  rustfmt.toml
backend/sysinfo/: .cirrus.yml  .gitignore  ADDING_NEW_PLATFORMS.md  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  build.rs
backend/sysinfo/.github/: FUNDING.yml
backend/sysinfo/.github/workflows/: CI.yml
backend/sysinfo/benches/: basic.rs
backend/sysinfo/examples/: simple.c  simple.rs
backend/sysinfo/md_doc/: component.md  cpu.md  disk.md  network_data.md  networks.md  pid.md  process.md  system.md
backend/sysinfo/src/: c_interface.rs  common.rs  debug.rs  lib.rs  macros.rs  sysinfo.h  system.rs  traits.rs  users.rs  utils.rs
backend/sysinfo/src/apple/: component.rs  cpu.rs  disk.rs  ffi.rs  ios.rs  mod.rs  network.rs  process.rs  system.rs  users.rs  utils.rs
backend/sysinfo/src/apple/app_store/: component.rs  mod.rs  process.rs
backend/sysinfo/src/apple/macos/: component.rs  disk.rs  ffi.rs  mod.rs  process.rs  system.rs
backend/sysinfo/src/freebsd/: component.rs  cpu.rs  disk.rs  mod.rs  network.rs  process.rs  system.rs  utils.rs
backend/sysinfo/src/linux/: component.rs  cpu.rs  disk.rs  mod.rs  network.rs  process.rs  system.rs  utils.rs
backend/sysinfo/src/unknown/: component.rs  cpu.rs  disk.rs  mod.rs  network.rs  process.rs  system.rs
backend/sysinfo/src/windows/: component.rs  cpu.rs  disk.rs  macros.rs  mod.rs  network.rs  process.rs  system.rs  tools.rs  users.rs  utils.rs
backend/sysinfo/test-unknown/: Cargo.toml
backend/sysinfo/test-unknown/src/: lib.rs
backend/sysinfo/tests/: cpu.rs  disk_list.rs  extras.rs  network.rs  process.rs  send_sync.rs  uptime.rs
backend/sysinfo/tests/code_checkers/: docs.rs  headers.rs  mod.rs  signals.rs  utils.rs
backend/whtop/: Cargo.toml  README.md
backend/whtop/src/: config.rs  errors.rs  layers.rs  main.rs  modules.rs  routes.rs  startup.rs
backend/whtop/src/errors/: request_error.rs
backend/whtop/src/layers/: cache_control.rs  last_modified.rs  system_refresh.rs
backend/whtop/src/routes/: cpu.rs  error.rs  memory.rs  processes.rs
backend/whtop/src/routes/api/: system.rs
backend/whtop/src/routes/api/system/: cpu.rs  memory.rs  processes.rs  state.rs
crates/whtop/: Cargo.toml  README.md
crates/whtop/src/: config.rs  errors.rs  layers.rs  main.rs  startup.rs
crates/whtop/src/errors/: request_error.rs
crates/whtop/src/routes/: cpu.rs  memory.rs  processes.rs
crates/whtop_common/src/models/api/: memory.rs  processes.rs
crates/whtop_web/: Cargo.toml  index.html  index.scss
crates/whtop_web/src/: components.rs  hooks.rs  main.rs  routes.rs
crates/whtop_web/src/components/: app.rs  dashboard.rs  navbar.rs  progress_ring.rs
crates/whtop_web/src/components/dashboard/: cpu.rs  dashboard.rs  memory.rs  processes.rs
crates/whtop_web/src/hooks/: intervals.rs
frontend/whtop_web/: Cargo.toml  README.md  Trunk.toml  index.html
frontend/whtop_web/assets/: index.scss
frontend/whtop_web/src/: components.rs  contexts.rs  hooks.rs  layers.rs  main.rs  routes.rs
frontend/whtop_web/src/components/: app.rs  dashboard.rs  meter.rs  navbar.rs  progress_ring.rs
frontend/whtop_web/src/components/dashboard/: cpu.rs  dashboard.rs  memory.rs  processes.rs
frontend/whtop_web/src/contexts/: http_client.rs  theme.rs
frontend/whtop_web/src/hooks/: intervals.rs
frontend/whtop_web/src/layers/: timeout.rs
shared/whtop_common/: Cargo.toml  README.md
shared/whtop_common/src/models/: api.rs
shared/whtop_common/src/models/api/: cpu.rs  memory.rs  processes.rs
