[package]
name = "whtop"
description = "A simple server monitoring tool"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# Common
whtop_common = { path = "../../shared/whtop_common" }

# Error handling
anyhow = "1"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Web server
axum = { version = "0.6", default-features = false, features = [
    "http1",
    "http2",
    "json",
    "tokio",
] }
axum-extra = { version = "0.4", features = ["spa"] }
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "time",
    "macros",
    "sync",
] }

# Middleware
tower = { version = "0.4", features = ["retry", "timeout", "util"] }
tower-http = { version = "0.3", features = [
    "cors",
    "trace",
    "util",
    "compression-br",
    "compression-deflate",
    "compression-gzip",
] }
futures = "0.3"
pin-project-lite = "0.2"

# Serialization
serde = { version = "1", features = ["derive"] }
envy = "0.4"

# System
sysinfo = { version = "0.25", path = "../sysinfo" } # need to read from /host/proc

# Util
chrono = { version = "0.4", default-features = false, features = [
    "std",
    "clock",
] }
chrono-tz = "0.8"

[dev-dependencies]
serde_json = "1"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "thin"
strip = true
panic = "abort"
