[package]
name = "whtop_web"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# Common
whtop_common = { path = "../../shared/whtop_common" }
# Frontend
yew = "0.19"
yew-router = "0.16"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo = "0.8"
gloo-utils = "0.1"
web-sys = { version = "0.3", features = [
    "AbortController",
    "AbortSignal",
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Window",
] }
# Serialization
serde = "1"
# Futures
futures = "0.3"
pin-project = "1"
# Global allocator
wee_alloc = "0.4"
# Requests
tower = { version = "0.4", features = ["limit", "util"] }
# Errors
anyhow = "1"

[profile.release]
opt-level = "z"
codegen-units = 1
lto = "thin"
panic = "abort"
